[tool.poetry]
name = "networkscanner"
version = "0.1.0"
description = ""
authors = ["RazvanBanateanu <banateanu.razvan1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scapy = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
